{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 31,
  "lineage": "a9406df8-ea17-fb6e-6998-1faee7c90e08",
  "resources": [
    {
      "module": "module.networking.module.custome_vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default_sg",
      "provider": "module.networking.module.custome_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:713881826090:security-group/sg-0d6836dce276f08c6",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0d6836dce276f08c6",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "713881826090",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "vpc_id": "vpc-0c75d6438afa66ebd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.module.custome_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.custome_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main_public_igw",
      "provider": "module.networking.module.custome_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:713881826090:internet-gateway/igw-0541c21d28a103a35",
            "id": "igw-0541c21d28a103a35",
            "owner_id": "713881826090",
            "region": "us-east-1",
            "tags": {
              "Managed": "Terraform",
              "Name": "customized-module-main-igw",
              "Type": "public"
            },
            "tags_all": {
              "Managed": "Terraform",
              "Name": "customized-module-main-igw",
              "Type": "public"
            },
            "vpc_id": "vpc-0c75d6438afa66ebd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.module.custome_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.custome_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_allowance_route",
      "provider": "module.networking.module.custome_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0541c21d28a103a35",
            "id": "r-rtb-09c9485e492fe64331080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-09c9485e492fe6433",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "713881826090",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-09c9485e492fe6433"
          },
          "dependencies": [
            "module.networking.module.custome_vpc.aws_internet_gateway.main_public_igw",
            "module.networking.module.custome_vpc.aws_route_table.default_main_route_table",
            "module.networking.module.custome_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.custome_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "default_main_route_table",
      "provider": "module.networking.module.custome_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:713881826090:route-table/rtb-09c9485e492fe6433",
            "id": "rtb-09c9485e492fe6433",
            "owner_id": "713881826090",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0541c21d28a103a35",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Managed": "Terraform",
              "Name": "customized-module-main-route-table",
              "Type": "public"
            },
            "tags_all": {
              "Managed": "Terraform",
              "Name": "customized-module-main-route-table",
              "Type": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c75d6438afa66ebd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "713881826090",
            "id": "rtb-09c9485e492fe6433",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.module.custome_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.custome_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "module.networking.module.custome_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:713881826090:route-table/rtb-08c713a9d734efcc4",
            "id": "rtb-08c713a9d734efcc4",
            "owner_id": "713881826090",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Managed": "Terraform",
              "Name": "customized-module-pri-route-table",
              "Type": "private"
            },
            "tags_all": {
              "Managed": "Terraform",
              "Name": "customized-module-pri-route-table",
              "Type": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c75d6438afa66ebd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "713881826090",
            "id": "rtb-08c713a9d734efcc4",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.module.custome_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.custome_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "module.networking.module.custome_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f4a5a0c3756e156e",
            "region": "us-east-1",
            "route_table_id": "rtb-08c713a9d734efcc4",
            "subnet_id": "subnet-0e19080288fdc03ad"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.module.custome_vpc.aws_route_table.private_route_table",
            "module.networking.module.custome_vpc.aws_subnet.private_subnets",
            "module.networking.module.custome_vpc.aws_vpc.vpc",
            "module.networking.module.custome_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.custome_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_association",
      "provider": "module.networking.module.custome_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-099315dac440d0ac7",
            "region": "us-east-1",
            "route_table_id": "rtb-09c9485e492fe6433",
            "subnet_id": "subnet-00253078644e5897c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.module.custome_vpc.aws_route_table.default_main_route_table",
            "module.networking.module.custome_vpc.aws_subnet.public_subnets",
            "module.networking.module.custome_vpc.aws_vpc.vpc",
            "module.networking.module.custome_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.custome_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "module.networking.module.custome_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:713881826090:subnet/subnet-0e19080288fdc03ad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e19080288fdc03ad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "713881826090",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Managed": "Terraform",
              "Name": "customized-module-pri-subnet-001",
              "Type": "private"
            },
            "tags_all": {
              "Managed": "Terraform",
              "Name": "customized-module-pri-subnet-001",
              "Type": "private"
            },
            "vpc_id": "vpc-0c75d6438afa66ebd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "713881826090",
            "id": "subnet-0e19080288fdc03ad",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.module.custome_vpc.aws_vpc.vpc",
            "module.networking.module.custome_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.custome_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "module.networking.module.custome_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:713881826090:subnet/subnet-00253078644e5897c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00253078644e5897c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "713881826090",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Managed": "Terraform",
              "Name": "customized-module-pub-subnet-001",
              "Type": "public"
            },
            "tags_all": {
              "Managed": "Terraform",
              "Name": "customized-module-pub-subnet-001",
              "Type": "public"
            },
            "vpc_id": "vpc-0c75d6438afa66ebd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "713881826090",
            "id": "subnet-00253078644e5897c",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.module.custome_vpc.aws_vpc.vpc",
            "module.networking.module.custome_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.custome_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "module.networking.module.custome_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:713881826090:vpc/vpc-0c75d6438afa66ebd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04bcea5f53d7cfc6b",
            "default_route_table_id": "rtb-03a12198e9248a7e0",
            "default_security_group_id": "sg-0d6836dce276f08c6",
            "dhcp_options_id": "dopt-07390fa67028f07a6",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c75d6438afa66ebd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03a12198e9248a7e0",
            "owner_id": "713881826090",
            "region": "us-east-1",
            "tags": {
              "Managed": "Terraform",
              "Name": "customized-module-vpc"
            },
            "tags_all": {
              "Managed": "Terraform",
              "Name": "customized-module-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "713881826090",
            "id": "vpc-0c75d6438afa66ebd",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}